{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 69,
  "lineage": "eac7028c-3704-e083-1ff6-c6abd0321e28",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f2ca844fcc9c25c",
            "arn": "arn:aws:ec2:us-east-1:992382567875:elastic-ip/eipalloc-03f2ca844fcc9c25c",
            "domain": "vpc",
            "id": "eipalloc-03f2ca844fcc9c25c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-138-8.compute-1.amazonaws.com",
            "public_ip": "3.212.138.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:992382567875:instance/i-077948496d78e1a3a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077948496d78e1a3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eclizator",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0745900c19452aec8",
            "private_dns": "ip-10-0-44-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.44.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092898ab72812353f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ba47a76a1373a383"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cdf47510eecba31d",
            "tags": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba47a76a1373a383"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_ami.ubuntu",
            "tls_private_key.student"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:992382567875:instance/i-00bc24b4eecd05d09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bc24b4eecd05d09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eclizator",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04561b45ab0343374",
            "private_dns": "ip-10-0-13-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.107",
            "public_ip": "44.197.205.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0660a0fb60be27dee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-026d61f2dc03e42be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfdc7caa7f6797f5",
            "tags": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026d61f2dc03e42be"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_ami.ubuntu",
            "tls_private_key.student"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:internet-gateway/igw-042c7f317fdf5c45e",
            "id": "igw-042c7f317fdf5c45e",
            "owner_id": "992382567875",
            "tags": {
              "Name": "eclizator-ig",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-ig",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f2ca844fcc9c25c",
            "association_id": "eipassoc-0428ba3b5d9474b7d",
            "connectivity_type": "public",
            "id": "nat-0ba365c41e209631c",
            "network_interface_id": "eni-00c59bc843c7aa908",
            "private_ip": "10.0.13.72",
            "public_ip": "3.212.138.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bfdc7caa7f6797f5",
            "tags": {
              "Name": "eclizator-nat",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-nat",
              "homework": "Homework_terraform",
              "student": "eclizator"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0181a645d1bda77cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ba365c41e209631c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0181a645d1bda77cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-042c7f317fdf5c45e",
            "id": "r-rtb-0bb0d871519a463bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb0d871519a463bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:route-table/rtb-0181a645d1bda77cd",
            "id": "rtb-0181a645d1bda77cd",
            "owner_id": "992382567875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:route-table/rtb-0bb0d871519a463bb",
            "id": "rtb-0bb0d871519a463bb",
            "owner_id": "992382567875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc17671db5e86449",
            "route_table_id": "rtb-0181a645d1bda77cd",
            "subnet_id": "subnet-0cdf47510eecba31d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033c26fda6d39d520",
            "route_table_id": "rtb-0bb0d871519a463bb",
            "subnet_id": "subnet-0bfdc7caa7f6797f5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:security-group/sg-0ba47a76a1373a383",
            "description": "Private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba47a76a1373a383",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.13.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eclizator-private-sg",
            "name_prefix": "",
            "owner_id": "992382567875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eclizator-private-sg",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-private-sg",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:security-group/sg-026d61f2dc03e42be",
            "description": "Public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026d61f2dc03e42be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eclizator-public-sg",
            "name_prefix": "",
            "owner_id": "992382567875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eclizator-public-sg",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-public-sg",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:subnet/subnet-0cdf47510eecba31d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.44.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdf47510eecba31d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382567875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-private",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:subnet/subnet-0bfdc7caa7f6797f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfdc7caa7f6797f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382567875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-public",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "vpc_id": "vpc-05f30ad296bcdf5c5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:vpc/vpc-05f30ad296bcdf5c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc12b4b1db738943",
            "default_route_table_id": "rtb-0dd50a570df6ad068",
            "default_security_group_id": "sg-052eec1693af1d6a5",
            "dhcp_options_id": "dopt-014e0f91e84e84975",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f30ad296bcdf5c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd50a570df6ad068",
            "owner_id": "992382567875",
            "tags": {
              "Name": "eclizator-vpc",
              "homework": "Homework_terraform",
              "student": "eclizator"
            },
            "tags_all": {
              "Name": "eclizator-vpc",
              "homework": "Homework_terraform",
              "student": "eclizator"
            }
          }
        }
      ]
    }
  ]
}